/* 
  Localizable.strings
  split-bills

  Created by Carlos Miguel de Elias on 23/2/19.
  Copyright © 2019 Carlos Miguel de Elias. All rights reserved.
*/

"root-controller.title" = "Split Bills";
"root-controller.groups" = "Groups";
"root-controller.empty-view.text-1" = "You have not added any split bills.\n\nTap the ";
"root-controller.empty-view.text-2" = " button to create a";
"root-controller.empty-view.text-3" = " new bill";

"new-split-controller.title" = "Bill";
"new-split-controller.event-info" = "Event info";
"new-split-controller.event-name" = "Event name";
"new-split-controller.participants" = "Participants";
"new-split-controller.add-participant" = "Add participant";
"new-split-controller.participant-number.format" = "Participant %d";
"new-split-controller.participant-placeholder.you" = "You";
"new-split-controller.participant-placeholder.other" = "Other";
"new-split-controller.participant-placeholder.new-participant" = "New Participant";
"new-split-controller.save" = "Save";
"new-split-controller.delete" = "Delete";

"split-controller.empty-view.text-1" = "Add ";
"split-controller.empty-view.text-2" = "New Expenses";
"split-controller.empty-view.text-3" = " to this bill";
"split-controller.edit" = "Edit";
"split-controller.cancel" = "Cancel";

"split.view.share" = "Share";
"split.view.settle-header" = "Settle";
"split.view.overview-header" = "Overview";
"split.view.sttle.pays-to" = "pays to";

"expenses.new.title" = "New Expense";
"expenses.new.info-header" = "Info";
"expenses.new.info-placeholder" = "What was for?";
"expenses.new.payer-header" = "Payer";
"expenses.new.amount-header" = "Amount";
"expenses.new.split-header" = "Split";
"expenses.new.split-equally-header" = "Equally between everyone";
"expenses.new.split-differently" = "Split differently";
"expenses.new.split-differently.equally" = "Equally";
"expenses.new.split-differently.amount" = "Amount";
"expenses.new.save" = "Save";
"expenses.new.delete" = "Delete";
"expenses.new.cancel" = "Cancel";
"expenses.new.delete-confirmation" = "Are you sure?";
